--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <div class="print-template" id="printTemplate" style="display: none;">
         <div id="printPhotos"></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
