borre el printTemplate

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 
                 <div class="print-section">
                     <p class="print-info">Tamaño de cada foto: <span id="sizeInfo">1.38" x 1.77"</span></p>
-                    <button id="printTemplate">Imprimir Plantilla</button>
+                    <button id="printBtn">Imprimir Plantilla</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="print-template" id="printTemplates" style="display: none;">
+    <div class="print-template" id="printArea" style="display: none;">
         <div id="printPhotos"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
