borre el printTemplate

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <div class="print-template" id="printArea" style="display: none;">
+    <div class="print-template" style="display: none;">
         <div id="printPhotos"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
