cambie to a ver klk

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Editor de Fotos para Visado</title>
 </head>
 <body>
-    <div class="container">
+<div class="container">
         <header>
             <h1>Editor de Fotos para Visado</h1>
             <p class="subtitle">Sube tu foto, ajusta el tamaño y crea tu plantilla de impresión</p>
@@ -69,9 +69,7 @@
         </div>
     </div>
 
-    <div class="print-template" style="display: none;">
-        <div id="printPhotos"></div>
-    </div>
+    <div id="print-container" style="display: none;"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
     <script src="app.js"></script>
 </body>
