--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
                 
                 <div class="print-section">
                     <p class="print-info">Tamaño de cada foto: <span id="sizeInfo">1.38" x 1.77"</span></p>
-                    <button id="printBtn">Imprimir Plantilla</button>
+                    <button id="printTemplate">Imprimir Plantilla</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <div id="print-container" style="display: none;"></div>
+    <div class="print-template" id="printTemplateDiv">
+        <div id="printPhotos"></div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
     <script src="app.js"></script>
 </body>
